fixing dark mode

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,7 +141,7 @@ the website, in dark theme
 
 .dark-theme .steps__bg,
 .dark-theme .questions{
-  background-color: var(--first-color-dark);
+  background-color: var(--first-color);
 }
 
 .dark-theme .product__circle,
@@ -149,8 +149,59 @@ the website, in dark theme
   background-color: var(--container-color);
 }
 
+.dark-theme footer, 
+.dark-theme .footer__container {
+  background-color: var(--first-color);
+}
+
+.dark-theme .about__details-icon{
+  color: var(--first-color-alt);
+}
+
+.dark-theme .responsive-table {
+  color: var(--first-color);
+}
+
+.dark-theme ol.gradient-list > li a {
+  color: var(--first-color);
+}
+
 .dark-theme .scroll-header{
   box-shadow: 0 1px 4px hsla(var(--hue), 4%, 4%, .3);
+}
+
+.dark-theme ol.gradient-list > li:nth-child(10n+1):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0.2) 0%, rgba(209, 242, 91, 0.2) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+2):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0.4) 0%, rgba(209, 242, 91, 0.4) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+3):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0.6) 0%, rgba(209, 242, 91, 0.6) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+4):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0.8) 0%, rgba(209, 242, 91, 0.8) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+5):before {
+  background: linear-gradient(135deg, #d1f25bcc 0%, #252830 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+6):before {
+  background: linear-gradient(135deg, #d1f25bcc 0%, rgba(209, 242, 91, 0.8) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+7):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0.6) 0%, rgba(209, 242, 91, 0.6) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+8):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0.4) 0%, rgba(209, 242, 91, 0.4) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+9):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0.2) 0%, rgba(209, 242, 91, 0.2) 100%);
+}
+.dark-theme ol.gradient-list > li:nth-child(10n+10):before {
+  background: linear-gradient(135deg, rgba(209, 242, 91, 0) 0%, rgba(209, 242, 91, 0) 100%);
+}
+.dark-theme ol.gradient-list > li + li {
+  margin-top: 2rem;
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
